style: fixing MUI dark mode

--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,3 @@
-body {
-  background-color: #333;
-}
 #root {
   position: relative;
 }
